Strange fix of chromium scrollbar bug https://bugs.chromium.org/p/chromium/issues/detail?id=453601

--- a/jet/static/jet/css/_sidebar.scss
+++ b/jet/static/jet/css/_sidebar.scss
@@ -128,7 +128,7 @@
     height: 100%;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-    position: relative;
+    transform: translate3d(0, 0, 0);
   }
 
   &-section {
